@@ -1,3 +1,10 @@
+2003-07-03  Bastien Nocera  <hadess@hadess.net>
+
+	* gnome-settings-keybindings.c: (get_screens_list),
+	(screen_exec_display_string), (grab_key), (do_grab),
+	(gnome_settings_keybindings_load): grab keys on all the screens for the
+	current display
+
 Thu Jun 26 07:37:20 2003  Jonathan Blandford  <jrb@gnome.org>
 
 	* gnome-settings-typing-break.c: new module to handle the
